# play

c/: a.out  bsearch.c  hcreate.c  htable.c  lfind.c  lsearch.c  qsort.c  qsort2.c  tdelete.c  tfind.c  tsearch.c
cpp/: access_specifier.cpp  conversion_operator.cpp  functor.cpp  lambda.cpp  lambda_capture.cpp  lambda_recursive.cpp  move_semantics.cpp  overide_overloaded_function.cpp  reference.cpp  shared_ptr.cpp  unique_ptr.cpp  virtual_function.cpp
dbus/: run_dbus_daemon.sh
font/: cairo.c  freetype1.cpp  freetype2.cpp  freetype4.cpp  freetype4.pro  freetype5.cpp  freetypepangocairo.c  pango1.c  pangocairo.c
glib/: clnt.c  serv.c
java/: Test.java
linux/: CMakeLists.txt  condition_after.c  condition_before.c  producer_consumer_01.c  simple_thread.h  simple_thread_exam.cpp  text_builder.cpp
python/: class_method_001.py  class_method_002.py  closer.py  decorator.py  generator.py  (+8 more)
qt/: CMakeLists.txt
qt/01_hello_world/: CMakeLists.txt
qt/01_hello_world/src/: main.cpp
qt/03_signal_and_slots/src/: main_window.h
qt/04_displaying_windows/src/: main.cpp  main_window.cpp  main_window.h
qt/05_layout_tabs_buddies/: CMakeLists.txt
qt/05_layout_tabs_buddies/src/: dialog.cpp
qt/dialog1/src/: eg_dialog.cpp  eg_dialog.h
yocto/dbus/server_client/: CMakeLists.txt
yocto/dbus/server_client/src/: dbus_eg_client.c
yocto/qt/: CMakeLists.txt
yocto/qt/02_gui_programming/: CMakeLists.txt
yocto/qt/02_gui_programming/src/: main_window.cpp  main_window.h
yocto/qt/03_signal_and_slots/: CMakeLists.txt
yocto/qt/03_signal_and_slots/src/: main_window.cpp
yocto/qt/04_displaying_windows/: CMakeLists.txt
yocto/qt/04_displaying_windows/src/: my_dialog.cpp  my_dialog.h
yocto/qt/05_layout_tabs_buddies/src/: dialog.h
yocto/qt/dialog1/: CMakeLists.txt
yocto/qt/dialog1/src/: main.cpp
(+24 files in other folders)
